--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+# requirements.txt
+
 streamlit
-torch
-torchvision
 Pillow
 numpy
+# Use the CPU-only version of PyTorch and Torchvision
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch
+torchvision
